# shubhamvij.github.io

./: .gitignore  CNAME  Dockerfile  Makefile  index.html  package-lock.json  package.json  style.css
.claude/skills/verify/: SKILL.md
.github/workflows/: deploy.yml
.husky/: pre-push
books/graph_ml_for_engineers/: pyproject.toml
books/graph_ml_for_engineers/notebooks/: 1_graphs_intro.ipynb  2_node_embeddings.ipynb
content/: about_me.md  scholar.yaml  settings.yaml  social.yaml
content/blog/: attention-everywhere.md  graph-foundation-models.md  hello-world.md
docs/plans/: 2026-03-06-retro-crt-website.md  2026-07-09-gfm-interactive-study-guide.md
docs/superpowers/plans/: 2026-07-09-attention-subchapters.md  2026-07-11-block-diagram-flow-redesign.md  2026-07-11-dlrm-embedding-tables-course.md  2026-07-11-flash-tiling-lab-expansion.md  2026-07-11-gfm-zoo-subchapters.md  2026-07-11-mla-deep-dive.md  (+1 more)
public/: feed.xml  robots.txt  sitemap.xml
resume/: resume.tex
scripts/: generate-cursors.mjs  prebuild.ts  update-scholar.ts
src/app/: globals.css  layout.tsx
src/app/[[...path]]/: page.tsx  (+1 more)
src/components/: AboutContent.tsx  BlogList.tsx  BootSequence.tsx  CRTFrame.tsx  Desktop.tsx  DesktopContextMenu.tsx  DesktopIcon.tsx  DisplayProperties.tsx  ResumeViewer.tsx  ScholarFeed.tsx  SleepOverlay.tsx  StartMenu.tsx  Taskbar.tsx  Window.tsx
src/lib/: blog.ts  courseCatalog.ts  scholar.ts  screenSavers.ts  settings.ts  social.ts  sounds.test.ts  sounds.ts  useIdleTimer.ts  useMobile.ts  useWindowManager.ts  windowCookies.ts
src/styles/: crt-effects.css
(+128 files in other folders)
